tests/invalidTest/typeConvert/test_sint16_2.q
# EXPECT type cannot be converted
def uint16 test(){
  sint16 var0 = -32769     #def & constant num
  return 0
}

